# tiny_pao

./: Cargo.toml  README.md
.github/workflows/: bench.yml
benches/: render.rs
examples/image/: Cargo.toml
examples/image/src/: main.rs
examples/src/: softbuffer.rs  white_window.rs
examples/text/: Cargo.toml
examples/text/src/: main.rs
src/: canvas.rs  lib.rs
src/core/: color.rs  mod.rs  pos.rs
tiny_pao/: Cargo.toml
tiny_pao/benches/: render.rs
tiny_pao/src/: canvas.rs
