[package]
name = "tiny-pao"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["examples/*"]

[workspace.dependencies]
tiny-pao = { version = "0.1.0", path = "." }

[dev-dependencies]
criterion = "0.8.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[[bench]]
name = "render"
harness = false

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
